<resources>
    <string name="app_name">PetHeart</string>
    <string name="memory_title_hint">Enter a title for the memory.</string>
    <string name="memory_title_label">TITLE</string>
    <string name="memory_description_label">DESCRIPTION</string>
    <string name="memory_favorited_label">Favorite</string>
    <string name="new_memory">New Memory</string>
    <string name="share_memory">Share Memory </string>
    <string name="delete_memory">Delete Memory</string>
    <string name="sort_memories_favorited">Show Favorited</string>
    <string name="sort_memories_all">Show All</string>
    <string name="memory_details">Remember %1s! It happened on %2s. Remember %3s!</string>
    <string name="memory_details_subject">PetHeart Memory Details</string>
    <string name="send_memory">Send memory via</string>
    <string name="memory_description_hint">Enter a description of the memory…</string>
    <string name="memory_title">Memory Title</string>
    <string name="memory_date">Memory Date</string>
</resources>