<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="319dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/memory_title_label" />

                <EditText
                    android:id="@+id/memory_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/memory_title_hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/memory_favorited_label" />

                <Switch
                    android:id="@+id/memory_favorited"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end" />
                
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/memory_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tool:text="Wed Nov 14 11:56 EST 2018" />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/memory_description_label" />

        <EditText
            android:id="@+id/memory_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/memory_description_hint" />

    </LinearLayout>
</ScrollView>